--- a/srping-boot-crud/src/main/resources/application.properties
+++ b/srping-boot-crud/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/ian
 spring.datasource.username = root
-spring.datasource.password = password
+spring.datasource.password = 940912
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
